updated at: 2023-04-25 22:34, お手軽ツインテール V2.0 - 食寝遊「ku-.nel.asob」 - BOOTH

--- a/VRChat/93/1269193.html
+++ b/VRChat/93/1269193.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9sAL3WGKpjrNl6YFiIuUMwMZqFleLfdjcD2uwJq90Xs="></script>
+    "zWv0ITBRJR9Te898VDsCMBA2AxPrpIAiQRsdWSyrrQs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"お手軽ツインテール V2.0","description":"VRChat使用想定　　お手軽ツインテールV2.0\n\n\n内容物\n・ツインテール.unitypackage\n\nモデル概要\n\nポリゴン数：1194\nマテリアル数：2(メッシュ部分を同色にする場合1)\n\n\n改変可・再配布不可です。\n\n\n2019/08/30　V2.0update\n・ボーンの分割数を増やしました。\n・片側ずつのサイドテールでの使用をできるようにしました。\n・ウェイトの設定を改善しました。\n・UV展開を変更しました。","url":"https://booth.pm/ja/items/1269193","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/c5e6ca9e-0060-44bc-918c-e161cccb358b/i/1269193/62df42b7-d271-4582-8995-6a109ec1d23e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9sAL3WGKpjrNl6YFiIuUMwMZqFleLfdjcD2uwJq90Xs="></script>
+    nonce="zWv0ITBRJR9Te898VDsCMBA2AxPrpIAiQRsdWSyrrQs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1269193/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               302
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1269193/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               302
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
