--- a/VRChat/48/1269048.html
+++ b/VRChat/48/1269048.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6b7/fmT4zPdoWIsf6fuMu2HZO3Q039PsIhsSeeiNU48="></script>
+    "abg3wX3bkaeXKdXB4KInA/+Y0P+kSDJpZ7e604T4/kE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向けオリジナルアバター】\"EWA-2 AXELA\"","description":"【動作確認】\nこのアバターは、2019/03/15以降の動作確認をしていません。\nなにかしらの不具合や、自力で更新が必要な可能性がありますことを予めご了承ください\n\n【説明】\nVRChatでの使用を想定したオリジナル3Dモデル\nその他ゲームや動画等でも使用可能\n\n\n制作者:Tokunaga_ac\n\n\n【更新履歴】\n2019/03/15  Ver1.01\n\n・一部塗りミスがあった為、Albedo、Metalicテクスチャを更新\n・arktoonの設定値変更。cube mapの追加。\n・Hand openのanimationが右手に反映されていなかった点の修正\n\n\n\n\n型式番号\"EWA-2\"　機体名\"AXELA(アクセラ)\"\n高い運動性と堅牢な装甲を持つ、格闘戦能力に特化した強襲型陸戦機です。\n\nドラゴンをモチーフにしており、動物的なしなやかさと機械の重厚さの両立を目指しました。\n\n\n\n\n\nunitypackage内のprefabは、\nstandardマテリアル、ウェザリングありテクスチャでセットアップ済み\n\n複数種類のマテリアル、テクスチャを同梱していますので、\n必要に応じてunityで設定を行ってください。\n\n\nまた、尻尾部分にダイナミックボーンの設定がしてあります。\nダイナミックボーンは有償アセットとなりますので、\n必要な場合は各自アセットストアで購入してインポートしてください。","url":"https://booth.pm/ja/items/1269048","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/6ac10b7b-256b-4e3b-b6d6-61437066f561/i/1269048/7183947a-d3e5-42a4-90c5-94e4e651e5fc_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6b7/fmT4zPdoWIsf6fuMu2HZO3Q039PsIhsSeeiNU48="></script>
+    nonce="abg3wX3bkaeXKdXB4KInA/+Y0P+kSDJpZ7e604T4/kE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -174,7 +174,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1269048/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               878
@@ -189,14 +189,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1269048/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               878
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
