--- a/VRChat/56/1268856.html
+++ b/VRChat/56/1268856.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "v4ixeikaErH1B5Wuy9EGbQIppseoQRNwQJbdOXdvoZI="></script>
+    "vdKYo9p2iaWKGnTVtIL9gPtKkcM0G61mHd3KEoFbaD0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"02.水密扉","description":"水密扉です。\n\n刻字 \"Perception\"\n\n\n※再配布は禁止します。\n※VRChatでの使用を想定しています。\n\n\n●免責事項\nこのモデルデータを利用することで何らかの問題、損害が生じても作者は責任を負いません。\n利用条件等は予告なく変更する場合があります。\n\n●Credit\n「Windows_glass」 by.Vikey\nhttps://share.allegorithmic.com/libraries/4139\n(CC BY-SA 4.0)","url":"https://booth.pm/ja/items/1268856","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5ae7f65e-5f8f-4971-922d-0dbf1bbe9d9e/i/1268856/550df933-ce46-442f-b68e-125670486c39_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="v4ixeikaErH1B5Wuy9EGbQIppseoQRNwQJbdOXdvoZI="></script>
+    nonce="vdKYo9p2iaWKGnTVtIL9gPtKkcM0G61mHd3KEoFbaD0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,10 +161,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1268856/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              175
+                              174
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1268856/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              175
+                              174
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
