--- a/VRChat/42/1268842.html
+++ b/VRChat/42/1268842.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KZ8IsaS2rggY+dcaL+zbGlVF4Ak4XLicugIQd1WJ+vM="></script>
+    "uOmEDqle3ogg8ccc1Dbrp6GgQkaT6HeORX7QGa0nURU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"リュック","description":"【同梱ファイル】\nリュック.fbx\nテクスチャーファイル（BMP）2種　UTS用1影2影\n改変用PSDファイル\nreadme.txt","url":"https://booth.pm/ja/items/1268842","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/a968361b-677c-4df2-bd21-ba86af47c168/i/1268842/35797d92-bdee-435e-b9f5-dc90b736d6c4_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KZ8IsaS2rggY+dcaL+zbGlVF4Ak4XLicugIQd1WJ+vM="></script>
+    nonce="uOmEDqle3ogg8ccc1Dbrp6GgQkaT6HeORX7QGa0nURU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1268842/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               230
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1268842/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               230
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
