--- a/VRChat/67/1268767.html
+++ b/VRChat/67/1268767.html
@@ -70,9 +70,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -102,9 +99,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "aGK5KqTt5rKpgf9xQHrxHO8UynSAYLh6VVhFCk3ijsY="></script>
+    "Kba0BF7xlD7A0mqUchzLOIGPzbuH1CXZAjRs1MYZwMc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"麗華（Reifa）","description":"VRChat向け中華娘アバター、麗華(Reifa)ちゃんです！\n\nフルトラ適正を確認しておらず、アイトラッキングを実装していないためお安くしています。\n小物を作ったり、調整したりしたらどんどん更新していく予定です！アフターサポートもがんばります。\n\n〇使い方\n　ダイナミックボーンとVRCSDKを設定しています\n　先にこれらをインポートした後、Unityパッケージをインポートしてください\n\n　Reifa_ver.1.0.0は完成したモデルです\n　Textureフォルダにテクスチャ、Reifa_sotaiに見えないところを消す前の基になったモデルが入っています\n\n\n〇利用規約\n本商品は主にVRCHATのアバターを想定して作られたモデルです\nVRCHAT向けに作ってありますがただの3DモデルなのでVRMなどでも使えると思います\n後日、VRMを用意する予定です\n使用可能な範囲でお使いください\n\nUTS（ユニティちゃんトゥーンシェーダー）を想定して調整しているため、シンプルなテクスチャとなっています\n色等を改変する場合は合わせて調整してください\n\n不具合、お問い合わせはTwitterまたはmail等でご連絡ください\n\n本商品を使用したことによって生じた問題に関しては「立花　忌兎」は一切の責任を負いません\n\n\n〇利用可能例\n　前提として利用する先のゲーム等の利用規約には従ってください\n　改変、商用利用は許可します\n　　その際には、作者へ声をかけていただけると喜びます\n　VRM化、各種サービスへのアップロード\n　パーツの他モデルへの組み込み\n　\n\n〇禁止事項\n　再配布、自作発言\n\nユニティちゃんトゥーンシェーダー ver.2.0.5","url":"https://booth.pm/ja/items/1268767","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/07f8d132-9b8d-4729-9a7e-fbc0ba6c3d85/i/1268767/6a094287-696f-4ebf-ab59-c62a5e4f2ddf_base_resized.jpg"}
     </script>
@@ -115,7 +112,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aGK5KqTt5rKpgf9xQHrxHO8UynSAYLh6VVhFCk3ijsY="></script>
+    nonce="Kba0BF7xlD7A0mqUchzLOIGPzbuH1CXZAjRs1MYZwMc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -139,6 +136,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +152,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -194,7 +194,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1268767/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               30
@@ -209,14 +209,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1268767/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               30
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
