--- a/VRChat/73/1268773.html
+++ b/VRChat/73/1268773.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Svdyv5NVDC68fpKv62981Ng3n2uqPZaxRoLtE/Y+/ag="></script>
+    "5702lz1AHvyHwDD6i+WGdLnMNSuU7uLqHX0wh8J4FGY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　ウシャンカ　ロシア帽","description":"概要\n\nロシアで被られている帽子、ウシャンカの3Dモデルです。\n△2376\n\n画像にのっているキッシュちゃんは付属しません。\n\n更新履歴\n\n2019/10/04\n・ファーシェーダの調整を行いました。\n・マーク部分のテクスチャがズレていたのを修正しました。\n・細部調整しました。\n\n2019/03/26\n・マテリアルが半分に減りました。\n・全体的に見えない所に出来ていたポリゴンを削除し△3255から△2376に減りました。\n・使用していたmatcapテクスチャを変更しました。\n・ソビエトのマークの葉の部分を修正しました。\n・シェーダをUnityパッケージに同梱したので別途インポートする必要が無くなり、使用するシェーダが1つ減りました。\n\n2019/03/10\n・公開\n\n内容物\n\nUshanka.unitypackage・・・ウシャンカのUnityパッケージです。\nread_me.txt・・・このファイルです。\n\n\n使用方法\n\n1.UnityでUshanka.unitypackageをインポートします。\n\n2.Ushanka.unitypackageをインポートするとUnlit_WF_ShaderとReflex Shaderがインポートされます。\n\n3.Ushanka PrefabをHierarchyにD\u0026Dして下さい。\n\n4.あとはお使いのアバターにあわせてセットしてください。\n\n\n・改変OK、再配布禁止です。\n・このデータの著作権は川崎緑が有します。\n\n\nウシャンカを使っていただいている画像をTwitterに送って頂けたら嬉しいです！\n@kwsk_ff","url":"https://booth.pm/ja/items/1268773","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/dce6e592-96e4-415b-b305-dfa03faa05f5/i/1268773/cb887f0f-9ba9-46cb-b79a-c3369fa43007_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Svdyv5NVDC68fpKv62981Ng3n2uqPZaxRoLtE/Y+/ag="></script>
+    nonce="5702lz1AHvyHwDD6i+WGdLnMNSuU7uLqHX0wh8J4FGY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1268773/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               206
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1268773/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               206
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
