updated at: 2023-04-25 22:36, 【VRCアバターアクセサリ―】12星座イヤリングなど - ミッドナイト工房 - BOOTH

--- a/VRChat/97/1268597.html
+++ b/VRChat/97/1268597.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xOQN9AB+C0ouaIXNsS77sG7WZ1vdIMhmvbbeV857Sc0="></script>
+    "xOhX83s7EwcO5SQ1sV598oyvgBx0lm5Gc1PWCdhobzc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRCアバターアクセサリ―】12星座イヤリングなど","description":"VRC想定アバターアクセサリ３Dモデルです\n自分の星座に合わせてテクスチャファイルを変えてアバターにつけてください\n\n*3.13のアップデートでバッジが変わりました。ご了承ください。\n\n*注意）１２星座に合わせて作られております。13星座には対応してません！\n\n\nファイル\n*FBXファイル３つ\n→\n①イヤリング（1162Poly）\n②バッジ（762Poly）\n③Chainなしモデル（562Poly）\nテクスチャファイル(Albedo、Emission、改変PSD)\n\n\n入れ方）自分の星座に合わせてTexureフォルダのEarring_TexureフォルダにあるテクスチャをConstellationのマテリアルのMain Textureに貼ります。\nそのあとEmissionフォルダの同じ星座のテクスチャファイルをEmissionに入れることで終わりです。\nイヤリングとして使う場合、AmatureのHeadに入れて位置を調整してください。\n\n\n\n\n*本モデルはArktoon-Shader1.0.1.1を使用しております。\nhttps://booth.pm/ja/items/1027997\n*本モデルはクリスタルシェーダーを使用しております。\n→https://booth.pm/ja/items/1148311\n\n*このモデルの再配布、制作自己主張はおやめください。\n*アクセサリーデータの改造自由\n\nなにか分からないことがございましたら\nTwitter ＠Luche_VRC　までご連絡ください。","url":"https://booth.pm/ja/items/1268597","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/c8c6e1b2-84b4-4743-9383-98bec6ad8fbf/i/1268597/c95d2927-44c9-470c-9fa6-a1bdf15ca1bc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xOQN9AB+C0ouaIXNsS77sG7WZ1vdIMhmvbbeV857Sc0="></script>
+    nonce="xOhX83s7EwcO5SQ1sV598oyvgBx0lm5Gc1PWCdhobzc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1268597/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              369
+                              370
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1268597/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              369
+                              370
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
