--- a/VRChat/26/1268526.html
+++ b/VRChat/26/1268526.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "VmK2G1YZhaYolJJK+00N9cM2hAhHxwvXnEtsT7Bw940="></script>
+    "KIGuwS1flmWyAAR2+KolXzAXVIWqqgho0rs5xoPlahw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スチームパンク風鞄 - StarGearBoxV1","description":"　ー◆ー\n\n1.商品情報\n\nオリジナル3Dモデル：スチームパンク風鞄 - StarGearBoxV1\n制作者：袴狐（HakamaKitune）\nデータ形式：Unityパッケージ\n\n　ー◆ー\n\n2.利用規約\n\n本規約は、”スチームパンク風鞄 - StarGearBoxV”（以下、本モデル）の利用条件について定めます。\n本モデルを購入した時点で本利用規約に同意したものとします。\n\n(1)著作権\n本モデル、改造モデル、及び本モデルデザインの著作権は袴狐（HakamaKitune）に帰属します。\n\n(2)許可する事\n・本モデルを改造する事を許可します。\n・購入者が、本モデルまたは改造した本モデルを、VRChat等サービス内で使用する事を許可します。\n・購入者が、本モデルまたは改造した本モデルのデータを、本人が使用するためにVRChat等サービスにアップロードする事を許可します。\n\n(3)禁止事項\n・本モデル、改造モデルのデータを再配布、または販売する事を禁止します。\n・購入者以外が、本モデル及び改造モデルを使用できるようにする行為を禁止します。\n・政治、宗教活動、他者に対する誹謗中傷目的での使用を禁止します。\n・本モデル、改造モデルを使用することによって生じた何らかのトラブル、損失に対し袴狐（HakamaKitune）は一切責任を負わないものとします。\n\n(4)付則\n制定日：2019年3月10日\n\n　ー◆ー\n\n3.その他、不明な点等があれば、Teitter:@hakama__kituneまでご連絡ください。\n\n　ー◆ー","url":"https://booth.pm/ja/items/1268526","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/50d23478-2b5e-4222-bac3-adaf76fc47cb/i/1268526/b8c3943c-f5e0-44f4-ae35-b593a6c1a47a_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VmK2G1YZhaYolJJK+00N9cM2hAhHxwvXnEtsT7Bw940="></script>
+    nonce="KIGuwS1flmWyAAR2+KolXzAXVIWqqgho0rs5xoPlahw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -175,7 +175,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1268526/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               88
@@ -190,14 +190,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1268526/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               88
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
