--- a/VRChat/63/1268463.html
+++ b/VRChat/63/1268463.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pLZo36DCR7jSOGMurUgYkyyrDPOX1nBBJPE1wRczG9w="></script>
+    "KrDXicfoyJtsbENjeKVFb5kfrh6AKCVIiKI84fi9Pn4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"scope shader vrchat","description":"included:\nmodel\nmaterial\nshader\nprefab","url":"https://booth.pm/ja/items/1268463","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8f7f716f-50d5-4447-97f1-2c584e695105/i/1268463/5db998bc-1dc5-4f28-b6c7-0fad5fe76278_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pLZo36DCR7jSOGMurUgYkyyrDPOX1nBBJPE1wRczG9w="></script>
+    nonce="KrDXicfoyJtsbENjeKVFb5kfrh6AKCVIiKI84fi9Pn4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,10 +158,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1268463/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              371
+                              373
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1268463/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              371
+                              373
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
