--- a/VRChat/53/1268453.html
+++ b/VRChat/53/1268453.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "mf27ZOuJCO4DBXqd1n/+DiO+WW+T9nEzYWUXM7CmwB8="></script>
+    "LcX7qsWLR4iwlq+EdiidTuiBp/XRrF2WxtNCyzs/xF4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"三重の金色の塔","description":"1枚目の画像はレイアウト例です。\n\n2枚目の画像の三段の黄金の塔が本体になります。\nボーンなどは一切入っていないモデルになっております。揺らしたい～というお声にはさぎりの能力不足でお答えできません。申し訳ありません…。\n\n基本的に自由に使用していただいて構いませんが、他人を不快にさせる目的や、宗教要素を含む使用用途にはご利用なさらないようにお願い申し上げます。\n\n連絡先:@rino_3506","url":"https://booth.pm/ja/items/1268453","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/cc7a5528-cef2-45ce-ba77-7bb2b5cb5eb6/i/1268453/f5b58aa3-5142-4ba3-8d61-2771a864eb16_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mf27ZOuJCO4DBXqd1n/+DiO+WW+T9nEzYWUXM7CmwB8="></script>
+    nonce="LcX7qsWLR4iwlq+EdiidTuiBp/XRrF2WxtNCyzs/xF4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1268453/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1268453/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
