updated at: 2023-04-25 22:37, VRchat向けアクセサリ Nekonoha&#39;s Stuff - みかん箱 - BOOTH

--- a/VRChat/46/1267846.html
+++ b/VRChat/46/1267846.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KydATB1B+W9nhlSwPm6K8DQpuCggL0W5d+IkdSVNFhk="></script>
+    "A6IpM15/enLgZArZJs61zhm2Lkk4Lt/Hqzf9rj5pfg8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向けアクセサリ Nekonoha's Stuff","description":"◆概要\n\n△364ポリゴン\n\nボーン等含まれていません。\n\nVRchat及びUnity向けのモデルです。\n魔法の杖です。ブンブン振り回すと振ったあとに軌跡が出ます。\nまた、先端にはライトが仕込んであります。杖を持つと周りが明るくなります。まぶしいので人に向けないようにしましょう！\n\nUnityPackageファイルを使うだけですぐに利用できます。インポートしてモデルのくっつけたい階層に突っ込んでください。（位置は合わせてね）\n\n◆ファイル内容\n\nunitypackage - 杖を使いたいアバターが入っているUnityProjectを開いた状態でクリックしてください。設定済みのモデルがインポートされます。\nblendファイル\nfbxファイル\n\n\n◆利用規約\n\n本モデルの著作権はNekonohaに帰属します。\n本モデルは商用・配信等に利用することができます。\n特定個人や団体等、他人を不快にさせる用途・目的等での使用はご遠慮ください。\n本モデルの改変・改造は自由です。\n改変・改造の有無に関わらず、本モデルデータの再配布及び再販売を禁止します。\n\n杖の先端はCrystal Shaderを利用させていただきました。Crystal Shaderについてはそちらの利用規約に準じてご利用ください。\n\n◆制作者\n\nネコノハヤシロ\n\n◆連絡先\n\nTwitter: @tan_fantazma\nDiscord: Nekonoha#9701","url":"https://booth.pm/ja/items/1267846","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/7db76cf7-7e72-4f84-ba1d-0ba63d5cdd5b/i/1267846/31dbbd80-acef-429f-8117-f91721d520c0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KydATB1B+W9nhlSwPm6K8DQpuCggL0W5d+IkdSVNFhk="></script>
+    nonce="A6IpM15/enLgZArZJs61zhm2Lkk4Lt/Hqzf9rj5pfg8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1267846/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1267846/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
