updated at: 2023-04-25 22:39, バーコードリーダー【VRChat向け3Dモデル】 v1.0 - モホズミズム (Mohozumizm) - BOOTH

--- a/VRChat/55/1266255.html
+++ b/VRChat/55/1266255.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "w/CKJIM+qFTBzXSHPhqDYFGJJkUOPHcmWSl1nfTQbVg="></script>
+    "HlN2iBfG5rUjyHshFSmKEs9bAMzm/hI6ZPNKpcTOm04="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バーコードリーダー【VRChat向け3Dモデル】 v1.0","description":"────────────────────────────────────────────────\n【導入・設定方法等はこちらからどうぞ】\nhttps://youtu.be/InaFv94FuH8\n────────────────────────────────────────────────\n\n　　　　　\u003e\u003e\u003e VRChat向け3Dモデル『バーコードリーダー』\u003e\u003e\u003e\n\nお店のレジでお馴染みの「ピッてするやつ」です。\nEmission、Spotlightによる発光は狙った対象を的確に捉え、\nアニメーションオーバーライドと効果音を組み合わせることで、\nいつでもどこでも誰にでも『ピッ』を可能にします。\nコード部分はDynamicBoneに対応。パラメータの設定も付属し、\n滑らかな動作があなたのレジさばきを一層引き立てます。\n（未所持の方でも利用できるよう、ケーブル無しver.も同梱しています。）\n\nまた、物に当たった際の光の形は、SpotlightへCookieを適用することで自由に変更できます。(Unity標準搭載) 導入状態ではいかにもといった形ですが、ハート型や文字など、アイデア次第で様々な用途に利用できます。\n\n導入・設定方法等は商品説明冒頭のURLから確認できます。","url":"https://booth.pm/ja/items/1266255","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/e23ab6a3-28ae-4dcf-bc4a-48691d1c27e0/i/1266255/148ba8cc-ed57-44e7-ad4e-05c6b44614b7_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="w/CKJIM+qFTBzXSHPhqDYFGJJkUOPHcmWSl1nfTQbVg="></script>
+    nonce="HlN2iBfG5rUjyHshFSmKEs9bAMzm/hI6ZPNKpcTOm04="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -174,7 +174,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1266255/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               167
@@ -189,14 +189,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1266255/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               167
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
