updated at: 2023-04-25 22:40, 【VRC対応】オリジナル３Dモデル「ちゃちゃ」 - ゆんちしょっぷ - BOOTH

--- a/VRChat/43/1266043.html
+++ b/VRChat/43/1266043.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "olqO9txCV6+AIrkhAdpd5CxJrDHtAmJsae8GV4eS8tM="></script>
+    "3NsmC8UA1RGNDMaGCk0lO53NZBlNakTa+nybpWXGp9Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC対応】オリジナル３Dモデル「ちゃちゃ」","description":"オリジナル3Dモデル\n「ちゃちゃ」\n・VRChat対応\n・リップシンク対応\n・表情モーフ3種(左右、両目瞬き)\n・18200ポリゴン\n\n※別途VRCsdk、ArktoonShaderの導入が必要になります。\n\n＝＝＝内容物＝＝＝\n１．以下のデータを含むunitypackage\n・即アップロード可能なprefab\n・fbx形式モデルデータ\n・マテリアル\n・テクスチャ\n＝＝＝利用規約(2019/03/09制定)＝＝＝\n\n購入前に、必ず利用規約をご確認ください。\n購入者は利用規約に同意したものとみなします。\n\n〇出来ること\n　・VRChat等でのアバターとしての使用\n　・モデルの改造、改変\n　・商用利用\n　・R-18、R-18G利用\n\n〇出来ないこと\n　・本モデル、改造、改変モデルの再配布及び再販売\n　・政治、宗教活動、反社会活動、他者に対する誹謗中傷等目的での使用\n\n※本モデル、改造、改変モデルの著作権はゆんちに帰属するものとします。\n※本モデル、改造、改変モデルの使用により生じたトラブル、損失に対しゆんちは一切責任を負わないものとします。\n\n以上。\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n質問要望ご意見受け付けております。お気軽にどうぞ\n連絡先\ntwitter@yuki_tamamo\n","url":"https://booth.pm/ja/items/1266043","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/1e2de017-a68d-4d3b-8d60-abc4243c09f8/i/1266043/4631ad90-3fbf-41dc-817b-76c059c92a4e_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="olqO9txCV6+AIrkhAdpd5CxJrDHtAmJsae8GV4eS8tM="></script>
+    nonce="3NsmC8UA1RGNDMaGCk0lO53NZBlNakTa+nybpWXGp9Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1266043/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1266043/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
