updated at: 2023-04-25 22:40, モミジ - えるふ造園 - BOOTH

--- a/VRChat/31/1266031.html
+++ b/VRChat/31/1266031.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uCC3r6/PsGZC1yU66YUjMl6ldBFJm+FkIfP/5kk0Hhk="></script>
+    "BZGfhOS7xD73QUmiWnnWSnXSoz1ZUo9t+B5cN27+xg8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"モミジ","description":"モミジです　約△8000ポリゴンです。\nunitypackageとfbxファイル、PNG画像ファイルが入っています。\n\n【利用規約】\n・このモデルの著作権は制作者　ぐねし　が所有しています。\n・使用時の連絡や著作権表示は必要ありません。営利目的での利用も可能です。\n・改変可能です。ただし本モデルの制作者を名乗ることはお止めください。\n・転載・再配布・再販売はお止めください。\n・本モデルデータを利用したことにより発生した損害、損失、その他の不利益に対して一切の責任を負いません。\n\n連作先：Twitter　@guneC2136\n\n使用した―ってスクショ送ってくれると喜びます。","url":"https://booth.pm/ja/items/1266031","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/78867027-c2fc-4af9-900c-781924406908/i/1266031/263fe2d8-cd9d-4fac-9848-69924515fb05_base_resized.jpg"}
     </script>
@@ -83,16 +83,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uCC3r6/PsGZC1yU66YUjMl6ldBFJm+FkIfP/5kk0Hhk="></script>
+    nonce="BZGfhOS7xD73QUmiWnnWSnXSoz1ZUo9t+B5cN27+xg8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -130,7 +129,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -171,7 +171,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1266031/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
@@ -186,14 +186,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1266031/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               31
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
