updated at: 2023-04-25 22:41, オリジナル3Dモデル【Servnel-セーブネル-】 - LibelalLine(KINAKODOUHU) - BOOTH

--- a/VRChat/19/1195319.html
+++ b/VRChat/19/1195319.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hSdE4Cgx+cc1d0m6Hosw1E1dgJi9joOKYMT29NTvbBw="></script>
+    "Yro0/1QMs5wodDDXrYYN+1p2oq4JUanjT7sNAh1+BjA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル【Servnel-セーブネル-】","description":"【概要】\nVRChatを想定して作成された\nHumanoid形式のオリジナル3Dモデルです。\n・オリジナル3Dモデル【Servnel-セーブネル-】制作者:oki75(奥菜こはる）\n・三角ポリゴン数:39,007ポリゴン(全パーツ込み）\n・Eye tracking:対応\n・Lip Sync:15種\n・BlendShape:44種\n・アニメーション13種","url":"https://booth.pm/ja/items/1195319","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4000"},"image":"https://booth.pximg.net/c/620x620/29407a6c-c2b7-4839-a56a-2c5c29fd9a70/i/1195319/d277f261-8a19-4a53-82c0-8fa9168cbe56_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hSdE4Cgx+cc1d0m6Hosw1E1dgJi9joOKYMT29NTvbBw="></script>
+    nonce="Yro0/1QMs5wodDDXrYYN+1p2oq4JUanjT7sNAh1+BjA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1195319/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               375
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1195319/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               375
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
